--- a/HelpArticles2/gradle/libs.versions.toml
+++ b/HelpArticles2/gradle/libs.versions.toml
@@ -26,9 +26,10 @@ markdown = "0.5.0"
 kotlinStdlib = "2.2.21"
 kotlinTest = "2.2.21"
 runner = "1.7.0"
-core = "1.7.0" # added - for markdown rendering
+core = "1.7.0"
 androidxComposeMaterialIcons = "1.7.8"
 roomCompiler = "2.8.3"
+sqliteJdbc = "3.51.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -70,6 +71,9 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 sqldelight-runtime = { group = "app.cash.sqldelight", name = "runtime", version.ref = "sqlDelight" }
 sqldelight-android-driver = { group = "app.cash.sqldelight", name = "android-driver", version.ref = "sqlDelight" }
 sqldelight-coroutines = { group = "app.cash.sqldelight", name = "coroutines-extensions", version.ref = "sqlDelight" }
+
+sqldelight-sqlite-driver = { group = "app.cash.sqldelight", name = "sqlite-driver", version.ref = "sqlDelight" }
+sqlite-jdbc = { group = "org.xerial", name = "sqlite-jdbc", version.ref = "sqliteJdbc" }
 
 # added - Coroutines
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
